tests/language_modules/07_string/valid/string_equality.vf
module StringEquality

procedure main()
is
    let label: String = "ready"
    check label = "ready"
end main

end StringEquality