tests/language_modules/07_string/invalid_semantics/string_integer_comparison.vf
module StringIntegerComparison

procedure main()
is
    check "ready" = 1
end main

end StringIntegerComparison